fix: course id null while creating an event